[project]
name = "wpg-city-mcp"
version = "0.1.0"
description = "MCP server providing tools for Winnipeg Transit data and 311 City Services information"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "nhannpl", email = "nhan@example.com" }
]
keywords = ["mcp", "winnipeg", "transit", "311", "model-context-protocol"]
license = { text = "MIT" }

[project.urls]
Repository = "https://github.com/nhannpl/wpg-city-mcp"
Homepage = "https://github.com/nhannpl/wpg-city-mcp"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.25.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=7.0.0",
    "python-dotenv>=1.2.1",
]

[dependency-groups]
dev = [
    "mutmut>=3.4.0",
]
